--- a/index.html
+++ b/index.html
@@ -1460,14 +1460,14 @@
             elsieEvents.push({
                 start: elsieNapStart,
                 end: elsieNapEnd,
-                title: "Nap Window",
+                title: "Nap Start Window",
                 type: "elsie"
             });
 
             elsieEvents.push({
                 start: elsieFeedStart,
                 end: elsieFeedEnd,
-                title: "Feed Window",
+                title: "Feed Start Window",
                 type: "elsie"
             });
         }
